--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p>Marketing</p>
             </div>
             <div class="image-container">
-                <img src="/card4.png" alt="Project 4">
+                <img src="card4.png" alt="Project 4">
                 <h1>Project 4</h1>
                 <p>Branding</p>
             </div>
