--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
         <div class="header">
             <div class="h-heading">Welcome To My</div>
-            <div class="h-heading">Portfolio</div>
+            <div class="h-heading h-heading1">Portfolio</div>
             <div class="h-image">
                 <img src="landing page.png" alt="Landing Page">
             </div>
